# NeuraChain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
ai/: README.md  requirements.txt  run_api.py
ai/src/: __init__.py  api.py  governance.py  model_manager.py  proof_of_ai.py
ai/tests/: test_proof_of_ai.py
core/: Cargo.toml
core/src/: block.rs  chain.rs  consensus.rs  crypto.rs  lib.rs  main.rs  network.rs  storage.rs  transaction.rs  utils.rs
core/tests/: consensus_test.rs
docs/: NeuraChain-whitepaper.md  api.md  architecture.md
frontend/: README.md  index.html  package.json
frontend/css/: neurachain.css
frontend/js/: neurachain.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/contexts/: NetworkContext.tsx  WalletContext.tsx
frontend/src/pages/: AIModels.tsx  Dashboard.tsx  Explorer.tsx  Governance.tsx  Wallet.tsx
sdk/: README.md  package.json  tsconfig.json
sdk/src/: ai.ts  client.ts  contract.ts  index.ts  transaction.ts  types.ts  utils.ts  wallet.ts
sdk/tests/: client.test.ts
smart_contracts/rust/: Cargo.toml
smart_contracts/rust/src/: ai_model.rs  context.rs  contract.rs  error.rs  lib.rs  storage.rs  token.rs
smart_contracts/solidity/: AIModelMarketplace.sol  HyperNovaToken.sol
