[package]
name = "hypernova_core"
version = "0.1.0"
edition = "2021"
authors = ["HyperNova Chain Team"]
description = "Core implementation of the HyperNova blockchain"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
parity-scale-codec = "3.6"
lattice-rs = "0.1.0" # Quantum-resistant cryptography

[lib]
name = "hypernova_core"
path = "src/lib.rs"

[[bin]]
name = "hypernova_node"
path = "src/main.rs"